Add style.css, finish styling template

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
 <body>
@@ -11,9 +12,9 @@
         <div class="header-top">
             <div class="logo">Header Logo</div>
             <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
             </ul>
         </div>
 
@@ -48,6 +49,7 @@
                 this is some subtext under an illustration or image
             </div>
         </div>
+        
         <div class="quote-container">
             <div class="quote">This is an inspiring quote, or a testimonial
                 from a customer. Maybe it's just filling up space, 
