--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 It's smaller font and the color is lower contrast.</div>
                 <button id="header-sign-up-button">Sign up</button>
             </div>
-            <img src="" alt="this is a placeholder for an image">
+            <img src="images/header_image.jpg" alt="this is a placeholder for an image">
         </div>
     </div>
 
@@ -33,19 +33,19 @@
         <div id="information-title">Some random information</div>
         <div class="image-container">
             <div class="image">
-                <img src="" alt="image">
+                <img src="images/image1.jpg" alt="image">
                 this is some subtext under an illustration or image
             </div>
             <div class="image">
-                <img src="" alt="image">
+                <img src="images/image2.jpg" alt="image">
                 this is some subtext under an illustration or image
             </div>
             <div class="image">
-                <img src="" alt="image">
+                <img src="images/image3.jpg" alt="image">
                 this is some subtext under an illustration or image
             </div>
             <div class="image">
-                <img src="" alt="image">
+                <img src="images/image4.jpg" alt="image">
                 this is some subtext under an illustration or image
             </div>
         </div>
