--- a/index.html
+++ b/index.html
@@ -1,77 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Landing page</title>
-</head>
-<body>
-    <div class="header">
-        <div class="header-top">
-            <div class="logo">Header Logo</div>
-            <ul class="header-links">
-                <li><a>header link one</a></li>
-                <li><a>header link two</a></li>
-                <li><a>header link three</a></li>
-            </ul>
-        </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Landing page</title>
+	</head>
+	<body>
+		<div class="header">
+			<div class="header-top">
+				<div class="logo">Header Logo</div>
+				<ul class="header-links">
+					<li><a>header link one</a></li>
+					<li><a>header link two</a></li>
+					<li><a>header link three</a></li>
+				</ul>
+			</div>
 
-        <div class="header-bottom">
-            <div class="header-sign-up">
-                <div id="header-title">This website is awesome</div>
-                <div class="header-text">This website has some subtext that goes here under the main title. 
-                It's smaller font and the color is lower contrast.</div>
-                <button id="header-sign-up-button">Sign up</button>
-            </div>
-            <img src="images/header_image.jpg" alt="this is a placeholder for an image">
-        </div>
-    </div>
+			<div class="header-bottom">
+				<div class="header-sign-up">
+					<div id="header-title">This website is awesome</div>
+					<div class="header-text">
+						This website has some subtext that goes here under the
+						main title. It's smaller font and the color is lower
+						contrast.
+					</div>
+					<button id="header-sign-up-button">Sign up</button>
+				</div>
+				<img
+					src="images/header_image.jpg"
+					alt="this is a placeholder for an image"
+				/>
+			</div>
+		</div>
 
-    <div class="container">
-        <div id="information-title">Some random information</div>
-        <div class="image-container">
-            <div class="image">
-                <img src="images/image1.jpg" alt="image">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="image">
-                <img src="images/image2.jpg" alt="image">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="image">
-                <img src="images/image3.jpg" alt="image">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="image">
-                <img src="images/image4.jpg" alt="image">
-                this is some subtext under an illustration or image
-            </div>
-        </div>
-        
-        <div class="quote-container">
-            <div class="quote">This is an inspiring quote, or a testimonial
-                from a customer. Maybe it's just filling up space, 
-                or maybe people will actually read it. Who knows? 
-                All I know is that it looks nice.
-            </div>
-            <div class="quote-author">-Thor, God of Thunder</div>
-        </div>
-        <div class="sign-up-container">
-            <div class="sign-up-text-container">
-                <div class="sign-up-title">Call to action! It's time!</div>
-                <div class="sign-up-text">Sign up for our product by clicking
-                    that button right over there!
-                </div>
-            </div>
-            <button class="sign-up-button">Sign up</button>
-        </div>
-    </div>
+		<div class="container">
+			<div id="information-title">Some random information</div>
+			<div class="image-container">
+				<div class="image">
+					<img src="images/image1.jpg" alt="image" />
+					this is some subtext under an illustration or image
+				</div>
+				<div class="image">
+					<img src="images/image2.jpg" alt="image" />
+					this is some subtext under an illustration or image
+				</div>
+				<div class="image">
+					<img src="images/image3.jpg" alt="image" />
+					this is some subtext under an illustration or image
+				</div>
+				<div class="image">
+					<img src="images/image4.jpg" alt="image" />
+					this is some subtext under an illustration or image
+				</div>
+			</div>
 
-    <div class="footer">
-        Copyright © The Odin Project 2023
-    </div>
+			<div class="quote-container">
+				<div class="quote">
+					This is an inspiring quote, or a testimonial from a
+					customer. Maybe it's just filling up space, or maybe people
+					will actually read it. Who knows? All I know is that it
+					looks nice.
+				</div>
+				<div class="quote-author">-Thor, God of Thunder</div>
+			</div>
+			<div class="sign-up-container">
+				<div class="sign-up-text-container">
+					<div class="sign-up-title">Call to action! It's time!</div>
+					<div class="sign-up-text">
+						Sign up for our product by clicking that button right
+						over there!
+					</div>
+				</div>
+				<button class="sign-up-button">Sign up</button>
+			</div>
+		</div>
 
-</body>
+		<div class="footer">Copyright © The Odin Project 2023</div>
+	</body>
 </html>
